# Migration-RUST

./: README.md
VoteTwoPeaks/: Cargo.toml  main.c
VoteTwoPeaks/src/: lib.rs
cross_lib/: Cargo.toml
cross_lib/c_project/: CMakeLists.txt  code.c  file.h
cross_lib/cargo/: config.toml
cross_lib/src/: lib.rs
dichotomic_search_lib/: Cargo.toml
dichotomic_search_lib/c_code/: main.c
dichotomic_search_lib/src/: lib.rs
dichotomic_test/: Cargo.toml
dichotomic_test/C_code/: main.c
dichotomic_test/src/: lib.rs
makeOnes/: Cargo.toml  main.c  memory.x
makeOnes/Cargo/: config.toml
makeOnes/src/: lib.rs
shapeForm/: Cargo.toml  main.c
shapeForm/src/: lib.rs
vote/: Cargo.toml  main.c  memory.x
vote/src/: lib.rs
vote_test/: Cargo.toml
vote_test/src/: main.rs
